--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/">home</a>
             <a href="{{ site.baseurl }}/kpop-concerts-i-went-to">kpop concerts I went to</a>
           </nav>
         </header>
