--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">home</a>
             <a href="{{ site.baseurl }}/kpop-concerts-i-went-to">kpop concerts I went to</a>
+            <a href="https://bsky.app/profile/heejinsoulyves.bsky.social">Bluesky</a>
           </nav>
         </header>
       </div>
