--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">home</a>
-            <a href="https://heejinsoulyves.thoughts.page/">🐱 blog (NEW!) 🐱</a>
+            <b></b><a href="https://heejinsoulyves.thoughts.page/">🐱 blog (NEW!) 🐱</a></b>
             <a href="{{ site.baseurl }}/kpop-concerts-i-went-to">kpop concerts I went to</a>
             <a href="{{ site.baseurl }}/archive">archive</a>
             <a href="{{ site.baseurl }}/about">about</a>
