--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
             <a href="{{ site.baseurl }}/kpop-concerts-i-went-to">kpop concerts I went to</a>
             <a href="{{ site.baseurl }}/archive">archive</a>
             <a href="{{ site.baseurl }}/about">about</a>
-            <a href="https://bsky.app/profile/heejinsoulyves.com">Bluesky</a>
+            <a href="https://bsky.app/profile/heejinsoulyves.bsky.social">Bluesky</a>
           </nav>
         </header>
       </div>
