Add Instagram embed script to default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,5 +50,6 @@
     </div>
 
     {% include analytics.html %}
+    <script async src="//www.instagram.com/embed.js"></script>
   </body>
 </html>
